add week02 gc test